Fill holes fails in certain case #40948

Closed
opened 2014-07-04 10:23:46 +02:00 by Leon Cheung · 6 comments
Member

System Information
Win8 64bit | GTX680

Blender Version
Broken: 2.71 81c3fc9

Short description of error
F operator or Fill Holes seems failing in such case. It might shouldn't be?

Exact steps for others to reproduce the error
Open example file, Tab in to Edit mode, F or search "Fill Holes" to fill the dimensional grid.

fillholes.png
fill_holes_.blend

Thanks for checking.

**System Information** Win8 64bit | GTX680 **Blender Version** Broken: 2.71 81c3fc9 **Short description of error** **F** operator or **Fill Holes** seems failing in such case. It might shouldn't be? **Exact steps for others to reproduce the error** Open example file, Tab in to Edit mode, F or search "Fill Holes" to fill the dimensional grid. ![fillholes.png](https://archive.blender.org/developer/F96683/fillholes.png) [fill_holes_.blend](https://archive.blender.org/developer/F96685/fill_holes_.blend) Thanks for checking.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Campbell Barton was assigned by Sergey Sharybin 2014-07-04 11:15:22 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by e1819cc918

This issue was referenced by e1819cc9183e2f167c42025581c96a1488911bef

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e1819cc918.

Closed by commit e1819cc918.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40948
No description provided.