Fix T40948: Fill holes fails in certain case